--- a/htdocs/themes/simplebootx/Public/nav.html
+++ b/htdocs/themes/simplebootx/Public/nav.html
@@ -34,19 +34,29 @@
           	</li>
           	<li class="dropdown user offline">
 	            <a class="dropdown-toggle user" data-toggle="dropdown" href="#">
-	           		<img src="__TMPL__/Public/images/headicon.png" class="headicon"/>登录<b class="caret"></b>
+	           		<img src="__TMPL__/Public/images/headicon.png" class="headicon"/>&nbsp;登录&nbsp;/&nbsp;
 	            </a>
-	            <ul class="dropdown-menu pull-right">
-	               <li><a href="{:leuu('user/login/index')}"><i class="fa fa-sign-in"></i> &nbsp;登录</a></li>
-	               <li class="divider"></li>
-	               <li><a href="{:leuu('user/register/index')}"><i class="fa fa-user"></i> &nbsp;注册</a></li>
+	            <ul class="dropdown-menu pull-left">
+					<li><a href="{:leuu('user/login/index')}"><i class="fa fa-sign-in"></i> &nbsp;个人登录</a></li>
+					<li class="divider">
+					    <li><a href="{:leuu('user/login/index')}"><i class="fa fa-sign-in"></i> &nbsp;企业登录</a></li>
+					</li>
 	            </ul>
           	</li>
+			<li class="dropdown user offline">
+				<a class="dropdown-toggle user" data-toggle="dropdown" href="#">注册</a>
+				<ul class="dropdown-menu pull-left">
+					<li><a href="{:leuu('user/register/index_per')}"><i class="fa fa-user"></i> &nbsp;个人注册</a></li>
+					<li class="divider">
+					    <li><a href="{:leuu('user/register/index_com')}"><i class="fa fa-user"></i> &nbsp;企业注册</a></li>
+					</li>
+				</ul>
+			</li>
 		</ul>
 		<div class="pull-right">
         	<form method="post" class="form-inline" action="{:U('portal/search/index')}" style="margin:18px 0;">
-				 <input type="text" class="" placeholder="请输入关键字" name="keyword" value="{:I('get.keyword')}"/>
-				 <input type="submit" class="btn btn-info" value="搜索" style="margin:0"/>
+				 <input type="text" class="" placeholder="Search" name="keyword" value="{:I('get.keyword')}"/>
+				 <input type="submit" class="btn btn-info" value="Go" style="margin:0"/>
 			</form>
 		</div>
        </div>
