--- a/htdocs/themes/simplebootx/User/Profile/edit.html
+++ b/htdocs/themes/simplebootx/User/Profile/edit.html
@@ -61,6 +61,12 @@
                                    					<textarea id="input-signature" placeholder="个性签名" name="signature">{$signature}</textarea>
                                    				</div>
                                    			</div>
+											<div class="control-group">
+												<label class="control-label" for="input-com_name">公司名称</label>
+												<div class="controls">
+													<textarea id="input-com_name" placeholder="公司名称" name="com_name">{$com_name}</textarea>
+												</div>
+											</div>
                                    			<div class="control-group">
                                    				<div class="controls">
                                    					<button type="submit" class="btn js-ajax-submit">保存</button>
