--- a/htdocs/themes/simplebootx/User/center.html
+++ b/htdocs/themes/simplebootx/User/center.html
@@ -73,6 +73,12 @@
                                    					{$signature|default='未填写'}
                                    				</div>
                                    			</div>
+											  <div class="control-group">
+												  <label class="control-label" for="input-con_name">公司名称</label>
+												  <div class="controls">
+													  {$com_name|default='未填写'}
+												  </div>
+											  </div>
                                    			<div class="control-group">
                                    				<div class="controls">
                                    					<a href="{:U('user/profile/edit')}" type="submit" class="btn">编辑</a>
