--- a/htdocs/themes/simplebootx/User/index.html
+++ b/htdocs/themes/simplebootx/User/index.html
@@ -70,6 +70,12 @@
 					               					{$signature|default='未填写'}
 					               				</div>
 					               			</div>
+											<div class="control-group">
+												<label class="control-label" for="input-com_name">公司名称</label>
+												<div class="controls">
+													{$com_name|default='未填写'}
+												</div>
+											</div>
 					               		</div>
                                    </div>
                                </div>							
